--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "parcel src/index.html",
+    "prod": "parcel src/index.html -p 8080",
     "build": "parcel build src/index.html"
   },
   "dependencies": {
