--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "parcel src/index.html",
-    "prod": "parcel src/index.html -p 8080",
+    "prod": "http-server dist/index.html",
     "build": "parcel build src/index.html"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "http-server": "^0.11.1",
     "parcel-bundler": "^1.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
