--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "prod": "http-server dist/index.html",
-    "build": "parcel build src/index.html"
+    "heroku-postbuild": "parcel build src/index.html"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.3",
