--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "auth0-js": "^9.10.0",
     "http-server": "^0.11.1",
     "parcel-bundler": "^1.11.0",
     "react": "^16.8.3",
