--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "auth0-js": "^9.10.0",
     "http-server": "^0.11.1",
     "parcel-bundler": "^1.11.0",
@@ -17,6 +16,8 @@
     "react-scripts": "^2.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3"
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3"
   }
 }
